--- a/HospitalProject/Views/Admin/_section4.cshtml
+++ b/HospitalProject/Views/Admin/_section4.cshtml
@@ -8,9 +8,9 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Date</th>
-                <th>Department</th>
-                <!-- Add more columns as needed -->
+                <th>@_localization.GetKey("date").Value</th>
+                <th>@_localization.GetKey("department").Value</th>
+                <th>@_localization.GetKey("doctor").Value</th>
             </tr>
         </thead>
         <tbody>
@@ -20,6 +20,7 @@
                     <td>@appointment.Id</td>
                     <td>@appointment.Date</td>
                     <td>@appointment.Department.DepartmentName</td>
+                    <td>@appointment.Doctor.FullName</td>
                 </tr>
             }
         </tbody>
