--- a/HospitalProject/Views/Admin/_AdminLayout.cshtml
+++ b/HospitalProject/Views/Admin/_AdminLayout.cshtml
@@ -88,7 +88,7 @@
         <div style="position: absolute; top: 20px; right: 20px; z-index: 1000;">
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Localization
+                    @_localization.GetKey("language").Value
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a asp-controller="Home" asp-action="ChangeLanguage" asp-route-culture="en-US" class="dropdown-item">
@@ -104,10 +104,25 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section1" })">Doctors</a></li>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section2" })">Departments</a></li>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section3" })">Patients</a></li>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section4" })">Appointment</a></li>
+                        <li><a href="@Url.Action("Index", "Home")" style="margin-bottom:5%">Home</a></li>
+                        <li>
+                            <a href="@Url.Action("LoadSection", "Admin", new { section = "_section1" })">
+                                @_localization.GetKey("doctors").Value
+                            </a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("LoadSection", "Admin", new { section = "_section2" })">
+                                @_localization.GetKey("departments").Value
+                            </a>
+                        </li>
+                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section3" })">
+                                @_localization.GetKey("patients").Value
+                            </a>
+                        </li>
+                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section4" })">
+                                @_localization.GetKey("appointments").Value
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </aside>
