--- a/HospitalProject/Views/Patient/_section3.cshtml
+++ b/HospitalProject/Views/Patient/_section3.cshtml
@@ -2,23 +2,19 @@
     Layout = "_PatientLayout.cshtml";
 }
 
-<section id="section2" style="display: flex;">
+<section id="section3" style="display: flex; flex-direction: column; align-items: center;">
     @model Patient
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Surname</th>
-                <!-- Add more columns as needed -->
-            </tr>
-        </thead>
-        <tbody> 
-                <tr>
-                    <td>@Model.Name</td>
-                    <td>@Model.Surname</td>
-                    <!-- Add more cells as needed -->
-                </tr>
-        </tbody>
-    </table>
+    <h2 style="margin-bottom: 20px;">@_localization.GetKey("userDetails").Value</h2>
+
+    <dl style="width: 300px;">
+        <dt>@_localization.GetKey("firstName").Value</dt>
+        <dd>@Model.Name</dd>
+
+        <dt>@_localization.GetKey("lastName").Value</dt>
+        <dd>@Model.Surname</dd>
+
+        <dt>@_localization.GetKey("email").Value</dt>
+        <dd>@Model.Email</dd>
+    </dl>
 
 </section>
