--- a/HospitalProject/Views/User/Login.cshtml
+++ b/HospitalProject/Views/User/Login.cshtml
@@ -12,20 +12,19 @@
             <div class="col-md-6">
                 <div class="form_container contact-form">
                     @model HospitalProject.Models.LoginViewModel
-
-                    <form asp-controller="User" asp-action="Login" method="post" data-val="true" data-val-method="Validate">
+                    <form asp-controller="User" asp-action="Login" method="post">
                         <div class="form-row">
                             <div class="col-lg-6">
                                 <div>
-                                    <label asp-for="Email"></label>
-                                    <input asp-for="Email" placeholder="@_localization.GetKey("email").Value" />
+                                    <label asp-for="Email">@_localization.GetKey("email").Value</label>
+                                    <input asp-for="Email" placeholder="@_localization.GetKey("yourEmail").Value" />
                                     <span asp-validation-for="Email" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div>
-                                    <label asp-for="Password"></label>
-                                    <input asp-for="Password" type="password" placeholder="@_localization.GetKey("password").Value" />
+                                    <label asp-for="Password">@_localization.GetKey("password").Value</label>
+                                    <input asp-for="Password" type="password" placeholder="@_localization.GetKey("yourPassword").Value" />
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                             </div>
@@ -40,7 +39,7 @@
                         </div>
                         <div class="btn_box">
                             <button type="submit">
-                                LOG IN
+                                @_localization.GetKey("login").Value
                             </button>
                         </div>
                         <div class="btn_box">
@@ -48,16 +47,10 @@
                                     onmouseover="this.style.color='#ffffff'; this.style.backgroundColor='#1fab89'"
                                     onmouseout="this.style.color='#1fab89'; this.style.backgroundColor='#ffffff'"
                                     onclick="signIn()">
-                                SIGN UP
+                                @_localization.GetKey("signUp").Value
                             </button>
-                        </div>
+                        </div>                        
                     </form>
-
-                    <script>
-                        function signIn() {
-                            window.location.href = '@Url.Action("Register", "User")';
-                        }
-                    </script>
                 </div>
             </div>
             <div class="col-md-6">
@@ -70,3 +63,8 @@
         </div>
     </div>
 </section>
+<script>
+    function signIn() {
+        window.location.href = '@Url.Action("Register", "User")';
+    }
+</script>
